--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <header>
-    <h1>Page Title</h1>
-  </header>
+    <h1 id="date">HTML5 forms: </h1>
+    <form class="" action="index.html" method="post" id="the-form">
+      <fieldset>
+        <label for="datePicker"></label>
+        <input type="date" id="datePicker">
+      </fieldset>
+      <fieldset>
+        <input type="color" name="name" value="#eeccff" id="colour">
+        <input type="range" min="0" max="100" value="" id="range">
+      </fieldfset>
+    </form>
+    <p id="the-value" class="value">50</p>
 
-  <div id="menu-toggle" class="menu">menu</div>
-  <nav id="menu-nav">
-      <a href="#">Item 1</a>
-      <a href="#">Item 2</a>
-      <a href="#">Item 3</a>
-  </nav>
-
-  <h1>Hello World</h1>
 
   <script src="js/scripts.js"></script>
 </body>
